fix-feature-of-admin-and-checkout-flow
